new About Me paragraph with 800 characters

--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -219,7 +219,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-contact-german" role="main" aria-label="Main contact german section">
       <section id="contact" aria-labelledby="contact-heading">
         <div class="container">
           <div class="h2-title">
