--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -211,7 +211,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-files-english" role="main" aria-label="Main files english section">
       <section class="download-files" aria-labelledby="download-files-title">
         <div class="my-files">
           <div class="container">
