--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -213,7 +213,11 @@
         </div>
       </div>
     </header>
-    <main>
+    <main
+      class="main-files-german"
+      role="main"
+      aria-label="Main files german section"
+    >
       <section class="download-files" aria-labelledby="download-files-title">
         <div class="my-files">
           <div class="container">
