--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -212,7 +212,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-portfolio-english" role="main" aria-label="Main portfolio english section">
       <section id="portfolio" aria-labelledby="projects-heading">
         <div class="container">
           <div class="h2-title">
