--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -215,7 +215,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-portfolio-german" role="main" aria-label="Main portfolio german section">
       <section id="portfolio" aria-labelledby="projects-heading">
         <div class="container">
           <div class="h2-title">
