--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -209,7 +209,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main" aria-label="Main Resume Section">
+    <main class="main-resume-english" role="main" aria-label="Main Resume english Section">
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
