--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -207,7 +207,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main" aria-label="Main Resume Section">
+    <main class="main-resume-mobile-english" role="main" aria-label="Main Resume mobile english Section">
       <div class="book">
         <!-- page 0 -->
         <div class="book-page">
