--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -213,7 +213,11 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main" aria-label="Main Resume Section">
+    <main
+      class="main-resume-mobile-german"
+      role="main"
+      aria-label="Main Resume mobile german Section"
+    >
       <div class="book">
         <!-- page 0 -->
         <div class="book-page">
