--- a/index-german.html
+++ b/index-german.html
@@ -215,7 +215,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-index-german" role="main" aria-label="Main index german section">
       <section id="about" aria-labelledby="about-heading">
         <div class="container">
           <div class="h2-title">
