--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -213,7 +213,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-contact-english" role="main" aria-label="Main contact english section">
       <section id="contact" aria-labelledby="contact-heading">
         <div class="container">
           <div class="h2-title">
