--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -214,7 +214,7 @@
         </div>
       </div>
     </header>
-    <main class="main-resume" role="main" aria-label="Main Resume Section">
+    <main class="main-resume-german" role="main" aria-label="Main Resume german Section">
       <div class="wrapper">
         <div class="cover cover-left" aria-hidden="true"></div>
         <div class="cover cover-right" aria-hidden="true"></div>
