--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="main-index-english" role="main" aria-label="Main index english section">
       <section id="about" aria-labelledby="about-heading">
         <div class="container">
           <div class="h2-title">
