Add a lighter to the pointer

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -455,6 +455,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -469,6 +470,7 @@
       </div>
     </footer>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
