--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -321,6 +321,7 @@
           </div>
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -336,6 +337,7 @@
     </footer>
 
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
