--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1746,6 +1746,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -1762,6 +1763,7 @@
     <script src="../Scripts/portfolio-sortment.js" async></script>
     <script src="../Scripts/toggle-english.js" async></script>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
