--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1774,6 +1774,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -1790,6 +1791,7 @@
     <script src="../Scripts/toggle-german.js" async></script>
     <script src="../Scripts/portfolio-sortment.js" async></script>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
