--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -880,6 +880,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -896,6 +897,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
     <!-- Async or defer for external scripts -->
     <script>
       window.dataLayer = window.dataLayer || [];
