--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -888,6 +888,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -904,6 +905,7 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/resume.js" async></script>
     <script src="../Scripts/transfer-resume.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
 
