--- a/index-german.html
+++ b/index-german.html
@@ -215,7 +215,11 @@
         </div>
       </div>
     </header>
-    <main class="main-index-german" role="main" aria-label="Main index german section">
+    <main
+      class="main-index-german"
+      role="main"
+      aria-label="Main index german section"
+    >
       <section id="about" aria-labelledby="about-heading">
         <div class="container">
           <div class="h2-title">
@@ -759,6 +763,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -774,6 +779,7 @@
     </footer>
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/carousel.js" async></script>
+    <script src="./Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
