--- a/Pages/contact-deutsch.html
+++ b/Pages/contact-deutsch.html
@@ -463,6 +463,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -477,6 +478,7 @@
       </div>
     </footer>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
