--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -328,6 +328,7 @@
           </div>
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -342,6 +343,7 @@
       </div>
     </footer>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
     <script
