--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -791,6 +791,7 @@
           <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -805,6 +806,7 @@
       </div>
     </footer>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
 
     <!-- Async or defer for external scripts -->
 
