--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -811,6 +811,7 @@
           <i class="fa-solid fa-up-long" aria-hidden="true"></i>
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -825,6 +826,7 @@
       </div>
     </footer>
     <script src="../Scripts/script.js" async></script>
+    <script src="../Scripts/Cursor.js" async></script>
     <!-- Async or defer for external scripts -->
 
     <script>
