--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
         </div>
       </div>
     </header>
-    <main class="main-index-english" role="main" aria-label="Main index english section">
+    <main
+      class="main-index-english"
+      role="main"
+      aria-label="Main index english section"
+    >
       <section id="about" aria-labelledby="about-heading">
         <div class="container">
           <div class="h2-title">
@@ -743,6 +747,7 @@
           />
         </a>
       </div>
+      <div class="custom-cursor"></div>
     </main>
     <footer>
       <div class="container">
@@ -758,6 +763,7 @@
     </footer>
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/carousel.js" async></script>
+    <script src="./Scripts/Cursor.js" async></script>
     <!-- Async or defer for external scripts -->
     <script
       async
