correction of carousel

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -43,7 +43,7 @@
     />
     <link
       rel="alternate"
-      href="https://draculady.de/Pages/contact-deutsch.html"
+      href="https://draculady.de/Pages/contact-german.html"
       hreflang="de-DE"
     />
     <link
@@ -213,7 +213,11 @@
         </div>
       </div>
     </header>
-    <main class="main-contact-english" role="main" aria-label="Main contact english section">
+    <main
+      class="main-contact-english"
+      role="main"
+      aria-label="Main contact english section"
+    >
       <section id="contact" aria-labelledby="contact-heading">
         <div class="container">
           <div class="h2-title">
@@ -442,7 +446,7 @@
       </div>
 
       <div class="languages">
-        <a href="./contact-deutsch.html" aria-label="Change Language to German">
+        <a href="./contact-german.html" aria-label="Change Language to German">
           <p>
             Sprache <br />
             änderen
