--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -198,7 +198,7 @@
               </ul>
             </li>
             <li>
-              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
+              <a href="./contact-german.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
@@ -316,7 +316,7 @@
         </a>
       </div>
       <div class="hire-me">
-        <a href="./contact-deutsch.html#contact" aria-label="Hire me">
+        <a href="./contact-german.html#contact" aria-label="Hire me">
           <div class="face">
             <div class="eyes">
               <div class="eye"></div>
