--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -199,7 +199,7 @@
               </ul>
             </li>
             <li>
-              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
+              <a href="./contact-german.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
