--- a/index-german.html
+++ b/index-german.html
@@ -200,7 +200,7 @@
               </ul>
             </li>
             <li>
-              <a href="./Pages/contact-deutsch.html" aria-label="Contact"
+              <a href="./Pages/contact-german.html" aria-label="Contact"
                 >Kontakt</a
               >
             </li>
@@ -359,7 +359,7 @@
               <span class="link-span"
                 >Ich lade potenzielle Partner und Arbeitgeber ein, mich
                 <a
-                  href="./Pages/contact-deutsch.html"
+                  href="./Pages/contact-german.html"
                   target="_blank"
                   aria-label="Kontaktieren Sie Kathrin Peled"
                   ><b>zu kontaktieren</b></a
@@ -731,7 +731,7 @@
       </section>
 
       <div class="hire-me">
-        <a href="./Pages/contact-deutsch.html#contact" aria-label="Hire me">
+        <a href="./Pages/contact-german.html#contact" aria-label="Hire me">
           <div class="face">
             <div class="eyes">
               <div class="eye"></div>
