--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -32,7 +32,7 @@
     />
     <meta
       property="og:url"
-      content="https://draculady.de/Pages/contact-deutsch.html"
+      content="https://draculady.de/Pages/contact-german.html"
     />
     <meta property="og:type" content="website" />
 
@@ -43,7 +43,7 @@
     />
     <link
       rel="alternate"
-      href="https://draculady.de/Pages/contact-deutsch.html"
+      href="https://draculady.de/Pages/contact-german.html"
       hreflang="de-DE"
     />
     <link
@@ -60,7 +60,7 @@
     />
     <link
       rel="canonical"
-      href="https://draculady.de/Pages/contact-deutsch.html"
+      href="https://draculady.de/Pages/contact-german.html"
     />
 
     <link
@@ -203,7 +203,7 @@
             </li>
             <li>
               <a
-                href="../Pages/contact-deutsch.html#contact"
+                href="../Pages/contact-german.html#contact"
                 aria-label="Contact"
                 >Kontakt</a
               >
@@ -219,7 +219,11 @@
         </div>
       </div>
     </header>
-    <main class="main-contact-german" role="main" aria-label="Main contact german section">
+    <main
+      class="main-contact-german"
+      role="main"
+      aria-label="Main contact german section"
+    >
       <section id="contact" aria-labelledby="contact-heading">
         <div class="container">
           <div class="h2-title">
