--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -200,7 +200,7 @@
               </ul>
             </li>
             <li>
-              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
+              <a href="./contact-german.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
@@ -1739,7 +1739,7 @@
         </div>
       </section>
       <div class="hire-me">
-        <a href="./contact-deutsch.html#contact" aria-label="Hire me">
+        <a href="./contact-german.html#contact" aria-label="Hire me">
           <div class="face">
             <div class="eyes">
               <div class="eye"></div>
