--- a/Pages/resume-mobile-german.html
+++ b/Pages/resume-mobile-german.html
@@ -198,7 +198,7 @@
               </ul>
             </li>
             <li>
-              <a href="./contact-deutsch.html#contact" aria-label="Kontakt"
+              <a href="./contact-german.html#contact" aria-label="Kontakt"
                 >Kontakt</a
               >
             </li>
