--- a/Pages/resume-mobile-english.html
+++ b/Pages/resume-mobile-english.html
@@ -207,7 +207,11 @@
         </div>
       </div>
     </header>
-    <main class="main-resume-mobile-english" role="main" aria-label="Main Resume mobile english Section">
+    <main
+      class="main-resume-mobile-english"
+      role="main"
+      aria-label="Main Resume mobile english Section"
+    >
       <div class="book">
         <!-- page 0 -->
         <div class="book-page">
@@ -292,18 +296,21 @@
               >
               in Berlin.</span
             >
-            I’m passionate about front-end development and design, set to
-            graduate in February 2025.
-            <a
-              href="../index.html"
-              target="_blank"
-              rel="noopener noreferrer"
-              aria-label="Visit my portfolio"
-              >My portfolio
-            </a>
-            reflects my focus on lightweight design, performance, and
-            accessibility. I am eager to start my career, constantly refining my
-            skills and showcasing new projects.
+            <span class="link-span"
+              >I’m passionate about front-end development and design, set to
+              graduate in February 2025.
+              <a
+                href="../index.html"
+                target="_blank"
+                rel="noopener noreferrer"
+                aria-label="Visit my portfolio"
+                >My portfolio
+              </a>
+              reflects my focus on lightweight design, performance, and
+              accessibility. I am eager to start my career, constantly refining
+              my skills and showcasing new projects.</span
+            >
+
             <div class="btn-box">
               <a
                 href="../Files/Kathrin Peled Professional Resume.pdf"
@@ -797,11 +804,15 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img
-            src="../Icons/Draculady-logo.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
+          <a
+            href="./sitemap.html"
+            target="_blank"
+            aria-label="Website's Map"
+            ><img
+              src="../Icons/Draculady-logo.webp"
+              loading="lazy"
+              alt="Draculady code logo"
+          /></a>
         </div>
       </div>
     </footer>
