--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1780,11 +1780,15 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <img
-            src="../Icons/Draculady-logo.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
+          <a
+            href="./sitemap.html"
+            target="_blank"
+            aria-label="Website's Map"
+            ><img
+              src="../Icons/Draculady-logo.webp"
+              loading="lazy"
+              alt="Draculady code logo"
+          /></a>
         </div>
       </div>
     </footer>
