--- a/index.html
+++ b/index.html
@@ -753,11 +753,15 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <img
-            src="./Icons/Draculady-logo.webp"
-            loading="lazy"
-            alt="Draculady code logo"
-          />
+          <a
+            href="./Pages/sitemap.html"
+            target="_blank"
+            aria-label="Website's Map"
+            ><img
+              src="./Icons/Draculady-logo.webp"
+              loading="lazy"
+              alt="Draculady code logo"
+          /></a>
         </div>
       </div>
     </footer>
