--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -92,6 +92,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link rel="stylesheet" href="../Styles/sitemap.css" />
+    <link rel="stylesheet" href="../Styles/style.css" />
     <!-- Google tag (gtag.js) -->
     <script
       async
