chnge descriptions of portfolios

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -466,7 +466,7 @@
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
           <a
-            href="./sitemap.html"
+            href="./Pages/sitemap.html"
             target="_blank"
             aria-label="Website's Map"
             ><img
