--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -215,7 +215,11 @@
         </div>
       </div>
     </header>
-    <main class="main-portfolio-german" role="main" aria-label="Main portfolio german section">
+    <main
+      class="main-portfolio-german"
+      role="main"
+      aria-label="Main portfolio german section"
+    >
       <section id="portfolio" aria-labelledby="projects-heading">
         <div class="container">
           <div class="h2-title">
@@ -519,9 +523,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 1</h5>
                 <p>
-                  Dieses Projekt ist eine meiner ersten Übungen, bei der nur
-                  JavaScript für das Styling verwendet wird, wobei zufällige
-                  Farben genutzt werden.
+                  Styling nur mit JavaScript, unter Verwendung zufälliger
+                  Farben.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -554,8 +557,7 @@
               <div class="portfolio-item">
                 <h5>Projekt 2</h5>
                 <p>
-                  In diesem Projekt habe ich gelernt, die
-                  DOM-Traversierungstechniken anzuwenden, die ich in einer der
+                  Anwenden der DOM-Traversierungstechniken, die ich in einer der
                   ersten Lektionen gelernt habe.
                 </p>
                 <div class="portfolio-item-image">
@@ -594,8 +596,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 3</h5>
                 <p>
-                  In dieser Übung gibt es 3 Absätze, und es ist möglich, jeden
-                  einzelnen durch Drücken von [X] zu löschen.
+                  Es gibt 3 Absätze und es ist möglich, jeden von ihnen durch
+                  Drücken von [X] zu löschen.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -628,11 +630,10 @@
               <div class="portfolio-item">
                 <h5>Projekt 4</h5>
                 <p>
-                  In dieser Übung habe ich eine dynamisch generierte
-                  Buch-Website erstellt! Anstatt die Bücher direkt in das HTML
-                  einzufügen, wird das HTML dynamisch basierend auf einem Array
-                  von JavaScript-Objekten generiert, und CSS-Klassen werden
-                  mithilfe der classList-API hinzugefügt.
+                  Eine dynamisch generierte Buch-Website. Anstatt die Bücher
+                  direkt in das HTML einzufügen, wird das HTML dynamisch
+                  basierend auf einem Array von JavaScript-Objekten generiert
+                  und CSS-Klassen werden mit der classList-API hinzugefügt.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -670,9 +671,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 5</h5>
                 <p>
-                  In dieser Übung habe ich einen laufenden Mario erstellt, der
-                  mit den Pfeiltasten der Tastatur gesteuert wird. Es war die
-                  erste dynamische Übung, die ich erstellt habe.
+                  Ein laufender Mario, der mit den Pfeiltasten auf der Tastatur
+                  gesteuert wird.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -711,9 +711,7 @@
                 <h5>Projekt 6</h5>
                 <p>
                   Der Spieler muss die richtige Farbe erraten, indem er auf die
-                  farbigen Quadrate auf der Seite klickt. Das Seitenlayout war
-                  bereits erstellt, aber ich habe das JavaScript
-                  vervollständigt, um es funktional zu machen!
+                  farbigen Quadrate auf der Seite klickt.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -746,10 +744,10 @@
               <div class="portfolio-item">
                 <h5>Projekt 7</h5>
                 <p>
-                  In diesem Projekt habe ich eine Pokémon-Suchmaschine mit der
-                  Fetch-API und der Pokémon-API erstellt. <br />
-                  Die Website ermöglicht es dem Benutzer, nach Pokémon zu suchen
-                  und ihre Statistiken und Fähigkeiten anzusehen.
+                  Eine Pokemon-Suchmaschine unter Verwendung der Fetch API und
+                  der Pokemon API. <br />
+                  Die Website ermöglicht es dem Benutzer, nach Pokemon zu suchen
+                  und ihre Werte sowie Fähigkeiten anzuzeigen.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -793,11 +791,11 @@
                 <h5>Projekt 8</h5>
                 <p>
                   Dies ist die erste Seite, die ich eigenständig erstellt habe,
-                  indem ich HTML, CSS und JavaScript kombiniert habe. Um es
-                  interessant zu gestalten, habe ich KI-Bilder hinzugefügt, die
-                  sich bei jedem Laden der Seite zufällig ändern. Klicken Sie
-                  auf die Bilder, schalten Sie die Lautsprecher ein und genießen
-                  Sie!
+                  basierend auf dem, was ich im JavaScript-Kurs gelernt habe,
+                  kombiniert mit HTML, CSS und JS. Um es unterhaltsam zu machen,
+                  habe ich AI-Bilder hinzugefügt, die sich bei jedem Neuladen
+                  zufällig ändern. Klicken Sie auf die Bilder, schalten Sie die
+                  Lautsprecher ein und genießen Sie!
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -835,11 +833,12 @@
               <div class="portfolio-item">
                 <h5>Projekt 9</h5>
                 <p>
-                  Diese Webseite habe ich speziell für meinen Bruder erstellt,
-                  der beschlossen hat, eine neue Nebentätigkeit als Privatlehrer
-                  zu beginnen. Die Webseite wird über eine Facebook-Seite und
-                  eine Sitemap beworben, mit Google Analytics überwacht und
-                  befindet sich noch in der Entwicklung.
+                  Ich habe diese Website speziell für meinen Bruder erstellt,
+                  der sich entschieden hat, eine neue Nebenkarriere als privater
+                  Lehrer zu starten. <br />
+                  Die Website wird über eine Facebook-Seite und eine Sitemap
+                  beworben, überwacht mit Google Analytics, und befindet sich
+                  noch in der Entwicklung.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -952,7 +951,7 @@
               <div class="portfolio-item">
                 <h5>Projekt 1</h5>
                 <p>
-                  Kleine Projekte beinhalten grundlegende Bootstrap-Fähigkeiten.
+                  Meine erste Übung, die ausschließlich Bootstrap verwendet.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -987,8 +986,7 @@
               <div class="portfolio-item">
                 <h5>Projekt 2</h5>
                 <p>
-                  Grid Project - hier gibt es ein Beispiel für ein kleines
-                  Projekt Gitter enthaltend.
+                  Grid-Projekt - ein Beispiel für eine kleine Übung mit Grid.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1021,8 +1019,9 @@
               <div class="portfolio-item">
                 <h5>Projekt 3</h5>
                 <p>
-                  Eine Seite über die Sängerin Whitney Houston. Dieses Projekt
-                  war mein erstes einseitiges Website-Projekt im Kurs.
+                  Eine einseitige Website über die Sängerin Whitney Houston.
+                  Dies war mein erstes Projekt für eine einseitige Website im
+                  Kurs.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1061,10 +1060,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 4</h5>
-                <p>
-                  Ein Beispiel für ein kleines Projekt enthält die grundlegende
-                  Verwendung von Formularen.
-                </p>
+                <p>Grundlegende Verwendung von Formularen.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_4.webp"
@@ -1092,10 +1088,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 5</h5>
-                <p>
-                  Ein kleines Projekt enthält grundlegende Grid-Elemente mit
-                  Responsive Layout.
-                </p>
+                <p>Grundlegende Grid-Elemente mit responsivem Layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_5.webp"
@@ -1131,7 +1124,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 6</h5>
-                <p>Ein kleines Projekt enthält responsive bunte Flexboxen.</p>
+                <p>Responsiv, bunte Flexboxen.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_6.webp"
@@ -1159,10 +1152,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 7</h5>
-                <p>
-                  In diesem Projekt geht es darum, zu üben, wie man den
-                  „overflow“ mit CSS kontrolliert.
-                </p>
+                <p>Übung zur Kontrolle von `overflow` mit CSS.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_7.webp"
@@ -1190,7 +1180,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 8</h5>
-                <p>Ein kleines Projekt mit responsivem Layout und Bildern.</p>
+                <p>Responsives Layout und Bilder.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_8.webp"
@@ -1223,9 +1213,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 9</h5>
-                <p>
-                  Ein kleines Projekt mit responsivem Layout und einem Formular.
-                </p>
+                <p>Ein Formular mit responsivem Layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_9.webp"
@@ -1251,7 +1239,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 10</h5>
-                <p>Ein kleines Projekt mit animierten Würfeln und Text.</p>
+                <p>Animierte Würfel und Text.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_10.webp"
@@ -1361,10 +1349,7 @@
             <div class="portfolio-items" aria-label="Alle Projekte">
               <div class="portfolio-item">
                 <h5>Projekt 13</h5>
-                <p>
-                  Ein kleines Projekt aus der zweiten Kurswoche, ein kleiner
-                  Blog mit mehreren Seiten.
-                </p>
+                <p>Ein kleiner Blog mit mehreren Seiten.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_13.webp"
@@ -1390,7 +1375,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 14</h5>
-                <p>Ein kleines Projekt mit Flexboxen mit responsivem Layout.</p>
+                <p>Verwendung von Flexboxen mit einem responsiven Layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_14.webp"
@@ -1418,7 +1403,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 15</h5>
-                <p>Ein kleines Projekt mit Tabelle.</p>
+                <p>Verwendung einer Tabelle.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_15.webp"
@@ -1444,10 +1429,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 16</h5>
-                <p>
-                  Ein kleines Projekt mit einer Tabelle mit „Zebra“-Effekt und
-                  Responsive Layout.
-                </p>
+                <p>Eine Tabelle mit „Zebra“-Effekt und responsivem Layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_16.webp"
@@ -1474,7 +1456,7 @@
               <div class="portfolio-item">
                 <h5>Projekt 17</h5>
                 <p>
-                  Ein kleines Projekt mit Flexboxen und Bildern mit Responsive
+                  Verwendung von Flexboxen und Bildern mit einem responsiven
                   Layout.
                 </p>
                 <div class="portfolio-item-image">
@@ -1504,9 +1486,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 18</h5>
-                <p>
-                  Ein kleines Projekt mit einer Tabelle mit Daten und Bildern.
-                </p>
+                <p>Eine Tabelle mit Daten und Bildern.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_18.webp"
@@ -1539,7 +1519,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 19</h5>
-                <p>Ein kleines Projekt mit einem Formular für Anmeldedaten.</p>
+                <p>Ein Formular für Login-Daten.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_19.webp"
@@ -1565,7 +1545,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Projekt 20</h5>
-                <p>Ein kleines Projekt mit dem Layout eines Musikplayers.</p>
+                <p>Ein Layout für einen Musikplayer.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_20.webp"
@@ -1592,8 +1572,7 @@
               <div class="portfolio-item">
                 <h5>Projekt 21</h5>
                 <p>
-                  Ein kleines Projekt mit einem Kontaktformular und Bildern mit
-                  a responsives Layout.
+                  Ein Kontaktformular und Bilder mit einem responsiven Layout.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1628,8 +1607,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 22</h5>
                 <p>
-                  Ein kleines Projekt mit einem transparenten Effekt für eine
-                  virtuelle Visitenkarte.
+                  Ein transparenter (Weichzeichner) Effekt für eine virtuelle
+                  Visitenkarte.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1659,9 +1638,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 23</h5>
                 <p>
-                  Ein kleines Projekt enthält eine einseitige
-                  Informationswebsite mit interne und externe Links mit
-                  responsivem Layout.
+                  Eine Seite einer Informationswebsite mit internen und externen
+                  Links und einem responsiven Layout.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1696,8 +1674,8 @@
               <div class="portfolio-item">
                 <h5>Projekt 24</h5>
                 <p>
-                  Ein kleines Projekt enthält eine einseitige
-                  Informationswebsite mit Bilder und ein responsives Layout.
+                  Eine Einzelseite einer Informationswebsite mit Bildern und
+                  einem responsiven Layout.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1780,10 +1758,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - Mein erstes Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
