--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -212,7 +212,11 @@
         </div>
       </div>
     </header>
-    <main class="main-portfolio-english" role="main" aria-label="Main portfolio english section">
+    <main
+      class="main-portfolio-english"
+      role="main"
+      aria-label="Main portfolio english section"
+    >
       <section id="portfolio" aria-labelledby="projects-heading">
         <div class="container">
           <div class="h2-title">
@@ -512,8 +516,7 @@
               <div class="portfolio-item">
                 <h5>Project 1</h5>
                 <p>
-                  This project is one of my first exercise using styling with
-                  JavaScript only, using randomal colors.
+                  Using styling with JavaScript only, using randomal colors.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -546,8 +549,8 @@
               <div class="portfolio-item">
                 <h5>Project 2</h5>
                 <p>
-                  In this project I learned to apply the DOM traversing
-                  techniques I've learned during one of the first lessons.
+                  Apply the DOM traversing techniques I've learned during one of
+                  the first lessons.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -585,8 +588,8 @@
               <div class="portfolio-item">
                 <h5>Project 3</h5>
                 <p>
-                  In this exercise there are 3 paragraphs and it is possible to
-                  delete each one of them by pressing [X].
+                  There are 3 paragraphs and it is possible to delete each one
+                  of them by pressing [X].
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -619,11 +622,10 @@
               <div class="portfolio-item">
                 <h5>Project 4</h5>
                 <p>
-                  In this exercise, I created a dynamically generated book
-                  website! Instead of adding the books directly into the HTML,
-                  the HTML is dynamically generated based on an array of
-                  JavaScript objects, and CSS classes are added using the
-                  classList API.
+                  A dynamically generated book website. Instead of adding the
+                  books directly into the HTML, the HTML is dynamically
+                  generated based on an array of JavaScript objects, and CSS
+                  classes are added using the classList API.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -660,11 +662,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 5</h5>
-                <p>
-                  In this exercise, I created a walking Mario controlled using
-                  the keyboard arrow keys. It was the first dynamic exercise I
-                  created.
-                </p>
+                <p>A walking Mario controlled using the keyboard arrow keys.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_2.5.webp"
@@ -702,8 +700,7 @@
                 <h5>Project 6</h5>
                 <p>
                   The player must guess the correct color by clicking on the
-                  colored squares on the page. The page layout was already
-                  built, but I completed the JavaScript to make it functional!
+                  colored squares on the page.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -736,8 +733,8 @@
               <div class="portfolio-item">
                 <h5>Project 7</h5>
                 <p>
-                  In this project I created a pokemon search engine using the
-                  Fetch API and the Pokemon API. <br />
+                  A pokemon search engine using the Fetch API and the Pokemon
+                  API. <br />
                   The website that allows the user to search for Pokemons and
                   see their stats and abilities.
                 </p>
@@ -938,7 +935,7 @@
             <div class="portfolio-items" aria-label="Projects">
               <div class="portfolio-item">
                 <h5>Project 1</h5>
-                <p>This project is my first exercise using bootstrap only.</p>
+                <p>My first exercise using bootstrap only.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_1.webp"
@@ -972,7 +969,7 @@
               <div class="portfolio-item">
                 <h5>Project 2</h5>
                 <p>
-                  Grid Project - here there is an example for a small project
+                  Grid Project - here there is an example for a small exercise
                   containing grid.
                 </p>
                 <div class="portfolio-item-image">
@@ -1046,9 +1043,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 4</h5>
-                <p>
-                  An Example for a small project contains basic use of forms.
-                </p>
+                <p>Basic use of forms.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_4.webp"
@@ -1076,10 +1071,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 5</h5>
-                <p>
-                  A small project contains basic Grid elements with responsive
-                  layout.
-                </p>
+                <p>Basic Grid elements with responsive layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_5.webp"
@@ -1115,7 +1107,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 6</h5>
-                <p>A small project contains responsive colorful flexboxes.</p>
+                <p>Responsive colorful flexboxes.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_6.webp"
@@ -1143,10 +1135,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 7</h5>
-                <p>
-                  This project is about practicing how to control `overflow`
-                  with CSS.
-                </p>
+                <p>Practicing how to control `overflow` with CSS.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_7.webp"
@@ -1174,7 +1163,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 8</h5>
-                <p>A small project with responsive layout and images.</p>
+                <p>Responsive layout and images.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_8.webp"
@@ -1233,7 +1222,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 10</h5>
-                <p>A small project with animated cubes and text.</p>
+                <p>Animated cubes and text.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_10.webp"
@@ -1261,7 +1250,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 11</h5>
-                <p>Animated picture and texts.</p>
+                <p>Animiertes Bild und Texte.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_11.webp"
@@ -1294,9 +1283,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 12</h5>
-                <p>
-                  A small project using only bootstrap with responsive layout.
-                </p>
+                <p>Nur Bootstrap mit responsivem Layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_12.webp"
@@ -1338,10 +1325,7 @@
             <div class="portfolio-items" aria-label="All Projects">
               <div class="portfolio-item">
                 <h5>Project 13</h5>
-                <p>
-                  A small project from the second week of the course, a small
-                  blog with several pages.
-                </p>
+                <p>A small blog with several pages.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_13.webp"
@@ -1367,7 +1351,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 14</h5>
-                <p>A small project using flexboxes with responsive layout.</p>
+                <p>Using flexboxes with responsive layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_14.webp"
@@ -1395,7 +1379,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 15</h5>
-                <p>A small project using table.</p>
+                <p>Using table.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_15.webp"
@@ -1419,10 +1403,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 16</h5>
-                <p>
-                  A small project using a table with "zebra" effect and
-                  responsive layout.
-                </p>
+                <p>A table with "zebra" effect and responsive layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_16.webp"
@@ -1448,10 +1429,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 17</h5>
-                <p>
-                  A small project using flexboxes and images with responsive
-                  layout.
-                </p>
+                <p>Using flexboxes and images with responsive layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_17.webp"
@@ -1479,7 +1457,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 18</h5>
-                <p>A small project using a table with data and images.</p>
+                <p>A table with data and images.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_18.webp"
@@ -1512,7 +1490,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 19</h5>
-                <p>A small project using a form for log-in data.</p>
+                <p>A form for log-in data.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_19.webp"
@@ -1538,7 +1516,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 20</h5>
-                <p>A small project using a layout of a music player.</p>
+                <p>A layout of a music player.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_20.webp"
@@ -1564,10 +1542,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 21</h5>
-                <p>
-                  A small project using a contact form and images with a
-                  responsive layout.
-                </p>
+                <p>A contact form and images with a responsive layout.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_21.webp"
@@ -1600,10 +1575,7 @@
               </div>
               <div class="portfolio-item">
                 <h5>Project 22</h5>
-                <p>
-                  A small project using a transparent effect for a virtual visit
-                  card.
-                </p>
+                <p>A transparent (blur) effect for a virtual visit card.</p>
                 <div class="portfolio-item-image">
                   <img
                     src="../Projects screenshots/Project_22.webp"
@@ -1632,8 +1604,8 @@
               <div class="portfolio-item">
                 <h5>Project 23</h5>
                 <p>
-                  This project contains a page of an information website with
-                  internal and external links and a responsive layout.
+                  A page of an information website with internal and external
+                  links and a responsive layout.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1668,8 +1640,8 @@
               <div class="portfolio-item">
                 <h5>Project 24</h5>
                 <p>
-                  This project contains a one page information website with
-                  images and a responsive layout.
+                  A one page information website with images and a responsive
+                  layout.
                 </p>
                 <div class="portfolio-item-image">
                   <img
@@ -1752,10 +1724,7 @@
       <div class="container">
         <p>&copy; 2024 Kathrin Peled - My First Portfolio</p>
         <div class="logo">
-          <a
-            href="./sitemap.html"
-            target="_blank"
-            aria-label="Website's Map"
+          <a href="./sitemap.html" target="_blank" aria-label="Website's Map"
             ><img
               src="../Icons/Draculady-logo.webp"
               loading="lazy"
