--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
       content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
     />
     <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta property="og:url" content="https://draculady.de/index.html" />
-
     <meta name="color-scheme" content="light only" />
 
     <meta name="author" content="Kathrin Peled Draculady" />
@@ -59,7 +57,7 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Courgette&family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&family=Kalam:wght@300;400;700&family=Maven+Pro:wght@400..900&family=Pacifico&family=Permanent+Marker&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="canonical" href="https://draculady.de/index.html" />
+    <link rel="canonical" href="https://draculady.de/" />
 
     <link
       rel="preload"
