change head links

--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -122,7 +122,7 @@
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
-      type="image/icon type"
+      type="image/webp"
     />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
