--- a/index-german.html
+++ b/index-german.html
@@ -119,11 +119,7 @@
     <!-- Link to the Schema.js file -->
     <script src="./Scripts/schema.js" defer></script>
     <title id="index-german">Kathrin Peleds Portfolio - Startseite</title>
-    <link
-      rel="icon"
-      href="./Icons/Draculady-icon.webp"
-      type="image/icon type"
-    />
+    <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
