--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -126,7 +126,7 @@
     <link
       rel="icon"
       href="../Icons/Draculady-icon.webp"
-      type="image/icon type"
+      type="image/webp"
     />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
