--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -110,11 +110,7 @@
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
     <title id="contact-english">Kathrin Peled - contact</title>
-    <link
-      rel="icon"
-      href="../Icons/Draculady-icon.webp"
-      type="image/icon type"
-    />
+    <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
