--- a/index.html
+++ b/index.html
@@ -117,11 +117,7 @@
     <!-- Link to the Schema.js file -->
     <script src="./Scripts/schema.js" defer></script>
     <title id="index-english">Kathrin Peled's Portfolio - Homepage</title>
-    <link
-      rel="icon"
-      href="./Icons/Draculady-icon.webp"
-      type="image/icon type"
-    />
+    <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
