updated falldown icon address

--- a/index-german.html
+++ b/index-german.html
@@ -120,6 +120,11 @@
     <script src="./Scripts/schema.js" defer></script>
     <title id="index-german">Kathrin Peleds Portfolio - Startseite</title>
     <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
+    <link
+      rel="icon"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
+      type="image/webp"
+    />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
