--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
     <link rel="icon" href="./Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
+    <link
+      rel="icon"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
+      type="image/webp"
+    />
   </head>
   <body>
     <header>
