--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -128,6 +128,7 @@
       href="../Icons/Draculady-icon.webp"
       type="image/webp"
     />
+    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
