--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -125,6 +125,8 @@
       href="../Icons/Draculady-icon.webp"
       type="image/webp"
     />
+    <link rel="icon" href="https://draculady.de/Icons/Draculady-icon.webp" type="image/webp" />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
