--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -111,6 +111,12 @@
     <script src="../Scripts/schema.js" defer></script>
     <title id="contact-english">Kathrin Peled - contact</title>
     <link rel="icon" href="../Icons/Draculady-icon.webp" type="image/webp" />
+    <link
+      rel="icon"
+      href="https://draculady.de/Icons/Draculady-icon.webp"
+      type="image/webp"
+    />
+
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="../Icons/Draculady-icon.webp" />
   </head>
